crates/rstest-bdd-macros/tests/fixtures/scenario_empty_file.stderr
error: failed to parse feature file: Could not read path: $WORKSPACE/target/tests/trybuild/rstest-bdd-macros/tests/features/empty.feature
 --> tests/fixtures/scenario_empty_file.rs:3:1
  |
3 | #[scenario(path = "tests/features/empty.feature")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `scenario` (in Nightly builds, run with -Z macro-backtrace for more info)
