crates/rstest-bdd-macros/tests/fixtures/scenario_empty_file.rs
use rstest_bdd_macros::scenario;

#[scenario(path = "tests/features/empty.feature")]
fn empty() {}

fn main() {}
